--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.8.4",
+    "firebase": "^9.9.0",
+    "firebase-tools": "^9.10.0",
+    "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^1.0.2",
     "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
