--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-uuid": "^1.0.2",
+    "scryfall-sdk": "^3.1.0",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
