--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.0",
     "firebase-tools": "^9.10.0",
     "jquery": "^3.6.0",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-firebase-hooks": "^5.0.3",
     "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.3.0",
@@ -57,6 +61,8 @@
     ]
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.2",
+    "@types/react-csv": "^1.1.3",
     "@types/uuid": "^8.3.4"
   }
 }
